syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bank.common.proto";
option java_outer_classname = "AccountProto";

service AccountService {
    rpc GetAccount (AccountRequest) returns (AccountResponse);
}

message AccountRequest {
    string accountId = 1;
}

message AccountResponse {
    string accountId = 1;
    string customerId = 2;
    string type = 3;
    double balance = 4;
}
